MMF-935 experiment ES resilience of user creation